--- a/com.store.smhilaw1.MainActivity/res/layout/design_sketch_hor_item.xml
+++ b/com.store.smhilaw1.MainActivity/res/layout/design_sketch_hor_item.xml
@@ -7,15 +7,17 @@
     android:focusableInTouchMode="true"
     android:orientation="vertical" >
 
+      
     <ImageView
         android:id="@+id/ItemIcon"
         android:layout_width="190dip"
         android:layout_height="110dip"
         android:layout_centerHorizontal="true"
         android:scaleType="fitXY"
-        android:src="@drawable/item_hor_bg_loading" >
+        android:src="@drawable/ic_launcher"
+         >
     </ImageView>
-
+    
     <TextView
         android:id="@+id/ItemTitle"
         android:layout_width="wrap_content"
@@ -30,20 +32,9 @@
         android:gravity="center_horizontal"
         android:marqueeRepeatLimit="marquee_forever"
         android:singleLine="true"
-        android:text=""
-        android:textColor="@color/white"
+        android:text="pleasegohome"
+        android:textColor="@color/blue"
         android:textSize="24dip" >
     </TextView>
-
-    <ImageView
-        android:id="@+id/lightcorner"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/ItemIcon"
-        android:layout_alignLeft="@+id/ItemIcon"
-        android:layout_alignRight="@+id/ItemIcon"
-        android:layout_alignTop="@+id/ItemIcon"
-        android:scaleType="fitXY"
-        android:src="@drawable/angle_light" />
 
 </RelativeLayout>
