--- a/com.store.smhilaw1.MainActivity/res/layout/grid_view.xml
+++ b/com.store.smhilaw1.MainActivity/res/layout/grid_view.xml
@@ -10,7 +10,7 @@
     android:layout_height="wrap_content"  
     android:layout_marginTop="30dip"
     android:layout_marginBottom="30dip"
-    android:numColumns="auto_fit"  
+    android:numColumns="5"  
     android:verticalSpacing="25dp"  
     android:horizontalSpacing="50dp"  
     android:columnWidth="90dp"  
