--- a/com.store.smhilaw1.MainActivity/res/layout/music_detail.xml
+++ b/com.store.smhilaw1.MainActivity/res/layout/music_detail.xml
@@ -22,7 +22,7 @@
             android:background="#00C5CD" />
 
         <ImageView
-            android:id="@+id/title_back"
+            android:id="@+id/title_image"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
@@ -33,10 +33,11 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
+        android:layout_weight="1"
         android:layout_height="wrap_content" >
 
         <ImageView
-            android:id="@+id/imageView1"
+            android:id="@+id/albumimage"
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:layout_alignParentLeft="true"
@@ -46,36 +47,36 @@
             android:src="@drawable/ic_launcher" />
 
         <TextView
-            android:id="@+id/apk_name"
+            android:id="@+id/albumname"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="28dp"
             android:layout_marginTop="34dp"
-            android:layout_toRightOf="@+id/imageView1"
+            android:layout_toRightOf="@+id/albumimage"
             android:text="花蝴蝶" />
 
         <TextView
-            android:id="@+id/textView1"
+            android:id="@+id/artist"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/apk_name"
-            android:layout_below="@+id/apk_name"
+            android:layout_alignLeft="@+id/albumname"
+            android:layout_below="@+id/albumname"
             android:text="歌手：蔡依林" />
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/Issuedate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/textView1"
-            android:layout_below="@+id/textView1"
+            android:layout_alignLeft="@+id/artist"
+            android:layout_below="@+id/artist"
             android:text="发行日期：2013-02-26" />
 
         <TextView
-            android:id="@+id/textView3"
+            android:id="@+id/albuminfo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="45dp"
-            android:layout_below="@+id/imageView1"
+            android:layout_below="@+id/albumimage"
             android:layout_marginRight="15dp"
             android:singleLine="false"
             android:lines="4"
@@ -84,26 +85,26 @@
         
 
         <TextView
-            android:id="@+id/textView7"
+            android:id="@+id/language"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/textView1"
+            android:layout_alignBottom="@+id/artist"
             android:layout_marginLeft="46dp"
-            android:layout_toRightOf="@+id/textView2"
+            android:layout_toRightOf="@+id/Issuedate"
             android:text="语言：国语" />
 
         <TextView
-            android:id="@+id/textView8"
+            android:id="@+id/company"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignBaseline="@+id/textView2"
-            android:layout_alignBottom="@+id/textView2"
-            android:layout_alignLeft="@+id/textView7"
+            android:layout_alignBaseline="@+id/Issuedate"
+            android:layout_alignBottom="@+id/Issuedate"
+            android:layout_alignLeft="@+id/language"
             android:text="唱片公司：华纳唱片" />
 
     </RelativeLayout>
     <TextView
-        android:id="@+id/textView6"
+        android:id="@+id/musiclist"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
@@ -113,10 +114,11 @@
 
     <RelativeLayout
         android:layout_width="fill_parent"
+        android:layout_weight="1"
         android:layout_height="wrap_content" >
 
         <TextView
-            android:id="@+id/textView4"
+            android:id="@+id/music1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
@@ -125,84 +127,84 @@
             android:text="1、爱引力" />
 
         <TextView
-            android:id="@+id/textView5"
+            android:id="@+id/music2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/textView4"
-            android:layout_below="@+id/textView4"
+            android:layout_alignLeft="@+id/music1"
+            android:layout_below="@+id/music1"
             android:text="2、影舞者" />
 
         <TextView
-            android:id="@+id/textView9"
+            android:id="@+id/music3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/textView5"
-            android:layout_below="@+id/textView5"
+            android:layout_alignLeft="@+id/music2"
+            android:layout_below="@+id/music2"
             android:text="3、妥协" />
 
         <TextView
-            android:id="@+id/textView10"
+            android:id="@+id/music4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/textView9"
-            android:layout_below="@+id/textView9"
+            android:layout_alignLeft="@+id/music3"
+            android:layout_below="@+id/music3"
             android:text="4、降落" />
 
         <TextView
-            android:id="@+id/textView11"
+            android:id="@+id/music5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/textView10"
-            android:layout_below="@+id/textView10"
+            android:layout_alignLeft="@+id/music4"
+            android:layout_below="@+id/music4"
             android:text="5、我的依赖" />
 
         <TextView
-            android:id="@+id/textView12"
+            android:id="@+id/music6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_above="@+id/textView5"
+            android:layout_above="@+id/music2"
             android:layout_alignParentRight="true"
             android:layout_marginRight="180dp"
             android:text="6、你快乐我内伤" />
 
         <TextView
-            android:id="@+id/textView13"
+            android:id="@+id/music7"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/textView12"
-            android:layout_below="@+id/textView12"
+            android:layout_alignLeft="@+id/music6"
+            android:layout_below="@+id/music6"
             android:text="7、热冬天 " />
 
         <TextView
-            android:id="@+id/textView14"
+            android:id="@+id/music8"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_above="@+id/textView10"
-            android:layout_alignLeft="@+id/textView13"
+            android:layout_above="@+id/music4"
+            android:layout_alignLeft="@+id/music7"
             android:text="8、花蝴蝶 " />
 
         <TextView
-            android:id="@+id/textView15"
+            android:id="@+id/music9"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_above="@+id/textView11"
-            android:layout_alignLeft="@+id/textView14"
+            android:layout_above="@+id/music5"
+            android:layout_alignLeft="@+id/music8"
             android:text="9、大丈夫" />
 
         <TextView
-            android:id="@+id/textView16"
+            android:id="@+id/music10"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignBaseline="@+id/textView11"
-            android:layout_alignBottom="@+id/textView11"
-            android:layout_alignLeft="@+id/textView15"
+            android:layout_alignBaseline="@+id/music5"
+            android:layout_alignBottom="@+id/music5"
+            android:layout_alignLeft="@+id/music9"
             android:text="10.愈慢愈美丽" />
 
         <Button
-            android:id="@+id/button1"
+            android:id="@+id/playmusic"
             android:layout_width="wrap_content"
             android:layout_height="30dp"
-            android:layout_below="@+id/textView16"
+            android:layout_below="@+id/music10"
             android:layout_centerHorizontal="true"
             android:text="播放" />
 
@@ -228,11 +230,12 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_weight="1"
         android:layout_marginLeft="25dp"
         android:layout_marginRight="25dp" >
 
         <ImageView
-            android:id="@+id/imageView3"
+            android:id="@+id/recommend1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
@@ -240,39 +243,39 @@
             android:src="@drawable/ic_launcher" />
 
         <ImageView
-            android:id="@+id/imageView4"
+            android:id="@+id/recommend2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/imageView3"
+            android:layout_alignBottom="@+id/recommend1"
             android:layout_marginRight="40dp"
-            android:layout_toLeftOf="@+id/imageView3"
+            android:layout_toLeftOf="@+id/recommend1"
             android:src="@drawable/ic_launcher" />
 
         <ImageView
-            android:id="@+id/imageView5"
+            android:id="@+id/recommend3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/imageView4"
+            android:layout_alignBottom="@+id/recommend2"
             android:layout_marginRight="40dp"
-            android:layout_toLeftOf="@+id/imageView4"
+            android:layout_toLeftOf="@+id/recommend2"
             android:src="@drawable/ic_launcher" />
 
         <ImageView
-            android:id="@+id/imageView6"
+            android:id="@+id/recommend4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/imageView3"
+            android:layout_alignBottom="@+id/recommend1"
             android:layout_marginLeft="40dp"
-            android:layout_toRightOf="@+id/imageView3"
+            android:layout_toRightOf="@+id/recommend1"
             android:src="@drawable/ic_launcher" />
 
         <ImageView
-            android:id="@+id/imageView7"
+            android:id="@+id/recommend5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/imageView6"
+            android:layout_alignBottom="@+id/recommend4"
             android:layout_marginLeft="40dp"
-            android:layout_toRightOf="@+id/imageView6"
+            android:layout_toRightOf="@+id/recommend4"
             android:src="@drawable/ic_launcher" />
         
     </RelativeLayout>
