优化代码，需要加订购按钮。调整了部分ui

--- a/com.store.smhilaw1.MainActivity/res/layout/musicplay.xml
+++ b/com.store.smhilaw1.MainActivity/res/layout/musicplay.xml
@@ -4,13 +4,14 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
     
-<RelativeLayout
+<LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@drawable/playcontrol_bg"
             android:gravity="center_vertical" 
             >
             <ImageButton
+                android:layout_weight="1"
                 android:id="@+id/btn_play"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -20,6 +21,7 @@
                 android:src="@drawable/desktop_playbt_b" />
             <ImageButton
                 android:id="@+id/btn_previous"
+                 android:layout_weight="1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
@@ -32,6 +34,7 @@
             <ImageButton
                 android:id="@+id/btn_next"
                 android:layout_width="wrap_content"
+                 android:layout_weight="1"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="6dp"
@@ -43,11 +46,12 @@
                 android:id="@+id/btn_stop"
                 android:text="停止"
                 android:layout_width="wrap_content"
+                 android:layout_weight="1"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
                 android:layout_centerVertical="true"
                 android:scaleType="fitCenter"
                 android:src="@drawable/chose_albumlist" />
 
-        </RelativeLayout>
+        </LinearLayout>
 </LinearLayout>
