--- a/com.store.smhilaw1.MainActivity/res/layout/music_detail.xml
+++ b/com.store.smhilaw1.MainActivity/res/layout/music_detail.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="match_parent"
     android:orientation="vertical" >
     <RelativeLayout 
@@ -96,14 +96,29 @@
             android:text="唱片公司：华纳唱片" />
 
     </RelativeLayout>
+       <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        >
     <TextView
         android:id="@+id/musiclist"
-        android:layout_width="fill_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:layout_marginRight="20dp"
         android:text="曲目列表"
         android:layout_marginLeft="20dp" />
+    <Button
+        android:id="@+id/btn_order_allmusic"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:textSize="20sp"
+        android:layout_marginRight="20dp"
+        android:text="订阅全部歌曲"
+        android:layout_marginLeft="20dp" />
+    </LinearLayout>
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_weight="1"
@@ -236,14 +251,12 @@
         android:layout_marginRight="20dp"
     
         />
-      
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:layout_marginLeft="25dp"
         android:layout_marginRight="25dp" >
-
          <LinearLayout
             android:id="@+id/items01"
             android:layout_width="wrap_content"
@@ -291,7 +304,6 @@
                  android:nextFocusDown="@+id/itme_hor_10"
                 />
         </LinearLayout>
-        
     </RelativeLayout>
 
 </LinearLayout>
