--- a/com.store.smhilaw1.MainActivity/res/drawable/button_selector.xml
+++ b/com.store.smhilaw1.MainActivity/res/drawable/button_selector.xml
@@ -1,8 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-
+<!-- 
     <item android:state_focused="false"  
         android:drawable="@drawable/hoverbk_normal" />  
      <item android:state_focused="true"     android:drawable= "@drawable/hoverbk_select" /> 
-
+     <item android:state_selected="true" android:drawable="@drawable/hoverbk_select"></item>
+      -->
+       <item android:state_focused="false"  
+        android:drawable="@drawable/hoverbk_normal" /> 
+     <item android:drawable="@drawable/hoverbk_select" android:state_focused="true"/>
+    <item android:drawable="@drawable/main_selector_modify" android:state_selected="true"/>
+    <item android:drawable="@drawable/main_selector_modify" android:state_pressed="true"/>
 </selector>
