修改部分部件，调整ui，优化一部分代码。

--- a/com.store.smhilaw1.MainActivity/res/layout/design_sketch_hor_item.xml
+++ b/com.store.smhilaw1.MainActivity/res/layout/design_sketch_hor_item.xml
@@ -33,7 +33,7 @@
         android:marqueeRepeatLimit="marquee_forever"
         android:singleLine="true"
         android:text="pleasegohome"
-        android:textColor="@color/blue"
+        android:textColor="#D9D919"
         android:textSize="24dip" >
     </TextView>
 
