--- a/com.store.smhilaw1.MainActivity/res/layout/activity_main_1920.xml
+++ b/com.store.smhilaw1.MainActivity/res/layout/activity_main_1920.xml
@@ -4,7 +4,6 @@
     android:layout_height="wrap_content" 
     android:background="@drawable/background"
     android:orientation="horizontal" >
-
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
@@ -12,13 +11,11 @@
         android:focusable="true"
         android:focusableInTouchMode="true"
         android:orientation="vertical" >
-
         <RelativeLayout
             android:layout_width="fill_parent"
             android:layout_height="match_parent"
             android:layout_weight="7"
             android:orientation="horizontal" >
-
             <ImageView
                 android:id="@+id/logo"
                 android:layout_width="wrap_content"
@@ -26,7 +23,6 @@
                 android:layout_marginTop="10dip"
                 android:layout_alignParentBottom="true"
                 android:background="@drawable/logo" />
-
             <Button
                 android:id="@+id/myMusic"
                 android:layout_width="wrap_content"
@@ -75,13 +71,11 @@
                 android:hint="@string/serch_hint"
                 />
         </RelativeLayout>
-
         <View
             android:layout_width="fill_parent"
             android:layout_height="2dip"
             android:layout_gravity="bottom"
             android:background="#505050" />
-
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="match_parent"
@@ -90,49 +84,16 @@
 
             <fragment
                 android:id="@+id/left"
-                android:name="com.store.smhilaw1.MainActivity$LeftFragment"
+                android:name="com.store.smhilaw1.MainActivity1$LeftFragment"
                 android:layout_width="match_parent"
                 android:layout_height="fill_parent"
-                android:layout_weight="5" />
+                android:layout_weight="3" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="fill_parent"
                 android:layout_weight="1"
                 android:orientation="vertical" >
-
-                <!--
-         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal" >
-
-            <EditText
-                android:id="@+id/select"
-                android:layout_width="160dip"
-                android:layout_height="33dip"
-                android:layout_marginLeft="200dip"
-                android:layout_marginTop="35dip"
-                android:background="@drawable/search3"
-                android:drawableRight="@drawable/search4"
-                android:gravity="center"
-                android:hint="@string/select_hint"
-                android:textColor="@color/text_grey" />
-
-            <EditText
-                android:id="@+id/search"
-                android:layout_width="350dip"
-                android:layout_height="33dip"
-                android:layout_marginLeft="20dip"
-                android:layout_marginTop="35dip"
-                android:background="@drawable/search1"
-                android:drawableRight="@drawable/search2"
-                android:gravity="center"
-                android:hint="@string/search_hint"
-                android:textColor="@color/text_grey" />
-        </LinearLayout>
-                -->
-
                 <RelativeLayout
                     android:id="@+id/right"
                     android:layout_width="fill_parent"
@@ -144,7 +105,6 @@
                     android:layout_marginTop="10dip"
                      />
             </LinearLayout>
-
             <LinearLayout
                 android:layout_width="20dip"
                 android:layout_height="fill_parent"
