--- a/com.store.smhilaw1.MainActivity/res/layout/fragment_left_title1920.xml
+++ b/com.store.smhilaw1.MainActivity/res/layout/fragment_left_title1920.xml
@@ -1,23 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="fill_parent"
-    android:background="@drawable/left_bk"
-    android:orientation="vertical" >
-
-    <!--
-                 <ImageView
-                android:id="@+id/logo"
-                android:layout_width="180dip"
-                android:layout_height="130dip"
-                android:layout_marginLeft="100dip"
-                android:layout_marginTop="30dip"
-                android:background="@drawable/logo"
-                android:contentDescription="@string/app_name" />
-    -->
-
     <ScrollView
-        android:layout_width="wrap_content"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:background="@drawable/left_bk"
+        android:layout_width="fill_parent"
         android:layout_height="match_parent"
         android:layout_marginBottom="30dip"
         android:layout_marginLeft="5dip"
@@ -26,7 +11,8 @@
         android:scrollbars="none" >
 
         <LinearLayout
-            android:layout_width="fill_parent"
+             android:layout_marginTop="30dip"
+            android:layout_width="wrap_content"
             android:layout_height="fill_parent"
             android:layout_gravity="center_horizontal"
             android:orientation="vertical" >
@@ -123,4 +109,3 @@
         </LinearLayout>
     </ScrollView>
 
-</LinearLayout>
