--- a/com.store.smhilaw1.MainActivity/res/layout/music_detail.xml
+++ b/com.store.smhilaw1.MainActivity/res/layout/music_detail.xml
@@ -75,14 +75,13 @@
             android:lines="4"
             android:text="    2009年万众期待华人天后蔡依林全新国语专辑【花蝴蝶】即将登场！蔡依林千变万化，不断创新的尝试，来到华纳发行的第一张专辑，Jolin和唱片公司老板工作员工都更上一层楼，以倍数的创意、预算、成本、力量务求带给歌迷前所未有的视听感受，从造型/舞蹈/包装/照片/MV,每个层面都涵盖......：" />
         
-        
 
         <TextView
             android:id="@+id/language"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/artist"
             android:layout_marginLeft="46dp"
+            android:layout_alignBottom="@+id/artist"
             android:layout_toRightOf="@+id/Issuedate"
             android:text="语言：国语" />
 
@@ -94,6 +93,16 @@
             android:layout_alignBottom="@+id/Issuedate"
             android:layout_alignLeft="@+id/language"
             android:text="唱片公司：华纳唱片" />
+      <Button
+            android:id="@+id/btn_order_allmusic"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+             android:layout_toRightOf="@+id/language"
+            android:layout_marginLeft="86dp"
+            android:layout_alignBaseline="@+id/artist"
+            android:layout_alignBottom="@+id/Issuedate"
+             android:text="订阅全部歌曲"
+           />
 
     </RelativeLayout>
        <LinearLayout
@@ -109,131 +118,37 @@
         android:layout_marginRight="20dp"
         android:text="曲目列表"
         android:layout_marginLeft="20dp" />
-    <Button
-        android:id="@+id/btn_order_allmusic"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:textSize="20sp"
-        android:layout_marginRight="20dp"
-        android:text="订阅全部歌曲"
-        android:layout_marginLeft="20dp" />
     </LinearLayout>
-    <LinearLayout
+     <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+          android:layout_weight="1"
+        android:orientation="horizontal"
+        >
+    <ScrollView
         android:layout_width="fill_parent"
         android:layout_weight="1"
         android:orientation="vertical"
         android:layout_height="wrap_content" >
         <!-- 
-      
  -->
-       <LinearLayout 
-           
-              android:layout_width="fill_parent"
+       <ListView
+            android:id="@+id/music_listview"
+             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
-            <Button
-            android:id="@+id/music1"
-            android:layout_weight="1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginLeft="22dp"
-            android:textSize="12sp"
-            android:text="1、爱引力" />
-        <Button
-            android:id="@+id/music2"
-            android:layout_weight="1"
-             android:textSize="12sp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/music1"
-            android:text="2、影舞者" />
-        <Button
-            android:id="@+id/music3"
-            android:layout_weight="1"
-             android:textSize="12sp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/music2"
-            android:text="3、妥协" />
+       </ListView>
+    </ScrollView>
 
-        <Button
-            android:id="@+id/music4"
-            android:layout_weight="1"
-             android:textSize="12sp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/music3"
-            android:text="4、降落" />
+    <include
+        android:id="@+id/item_hor_02"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="2"
+        layout="@layout/musicplay"
+        android:nextFocusRight="@+id/item_hor_03" />
 
-        <Button
-            android:id="@+id/music5"
-            android:layout_weight="1"
-             android:textSize="12sp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="5、我的依赖" />
-       </LinearLayout>
-       <LinearLayout 
-              android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-           >
-           
-             <Button
-                   android:layout_alignParentLeft="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginLeft="22dp"
-            android:id="@+id/music6"
-            android:layout_weight="1"
-             android:textSize="12sp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:text="6、你快乐我内伤" />
-
-        <Button
-            android:id="@+id/music7"
-             android:textSize="12sp"
-             android:layout_weight="1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="7、热冬天 " />
-
-        <Button
-            android:id="@+id/music8"
-             android:textSize="12sp"
-             android:layout_weight="1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="8、花蝴蝶 " />
-
-        <Button
-            android:id="@+id/music9"
-            android:layout_weight="1"
-            android:layout_width="wrap_content"
-             android:textSize="12sp"
-            android:layout_height="wrap_content"
-            android:text="9、大丈夫" />
-
-        <Button
-            android:id="@+id/music10"
-             android:textSize="12sp"
-             android:layout_weight="1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBaseline="@+id/music5"
-            android:layout_alignBottom="@+id/music5"
-            android:text="10.愈慢愈美丽" />
-           
-           
-       </LinearLayout>
-
-      
-   
     </LinearLayout>
     <TextView
         android:id="@+id/textView6"
@@ -242,14 +157,12 @@
         android:layout_marginTop="20dp"
         android:text="热门推荐"
         android:layout_marginLeft="20dp" />
-
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="fill_parent"
         android:layout_height="5dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-    
         />
     <RelativeLayout
         android:layout_width="match_parent"
@@ -262,7 +175,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1" >
-
             <include
                 android:id="@+id/item_hor_01"
                 android:layout_width="wrap_content"
@@ -270,7 +182,6 @@
                 android:layout_weight="1"
                 layout="@layout/music_sketch_hor_item"
                 android:nextFocusRight="@+id/item_hor_02" />
-
             <include
                 android:id="@+id/item_hor_02"
                 android:layout_width="wrap_content"
