--- a/com.store.smhilaw1.MainActivity/res/layout/musicdetial_list_item.xml
+++ b/com.store.smhilaw1.MainActivity/res/layout/musicdetial_list_item.xml
@@ -1,33 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:layout_width="fill_parent"
+    android:layout_height="100dp"
+    android:background="@drawable/catalog_list_selector"
+    android:orientation="horizontal" >
     
-<RelativeLayout 
+<LinearLayout 
     android:layout_height="wrap_content"
-    android:layout_width="match_parent"
+    android:layout_width="fill_parent"
+     android:layout_weight="1"
     >
     <TextView
         android:id="@+id/musicchartername"
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:layout_marginRight="20dp"
         android:text="我爱北京天安门"
         android:layout_marginLeft="20dp" />
+    </LinearLayout >
+  <LinearLayout 
+    android:layout_height="wrap_content"
+    android:layout_width="fill_parent"
+     android:layout_weight="1"
+     android:gravity="right"
+    >
      <Button
         android:id="@+id/btn_music_play"
-         android:layout_toRightOf="@+id/musiclist"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:textSize="18sp"
         android:text="试播"
-        android:layout_marginLeft="20dp" />
+        />
       <Button
         android:id="@+id/btn_music_down"
-         android:layout_toRightOf="@+id/btn_music_play"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
@@ -35,6 +42,7 @@
         android:layout_marginRight="10dp"
         android:text="下载"
         android:layout_marginLeft="20dp" />
-</RelativeLayout>
+      </LinearLayout>
+      </LinearLayout>
 
-</LinearLayout>
+
