--- a/com.store.smhilaw1.MainActivity/res/values/colors.xml
+++ b/com.store.smhilaw1.MainActivity/res/values/colors.xml
@@ -37,6 +37,8 @@
 	<color name="content_txt_red">#bc4c4c</color>
 	
 	<color name="charts_yellow_bg_color">#FFF6E0</color>
-	
-	    
+	<color name="transparent">#00000000</color>
+	<color name="shiguanlan">#5F9F9F</color>
+	    	<color name="color_bright_green">#a6da00</color>
+	    	
 </resources>
